<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="608dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="11dp"
        android:onClick="onClick"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/btnSendNotification"
        app:layout_constraintEnd_toStartOf="@+id/btnRanking"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="608dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="11dp"
        android:text="@string/ranking"
        app:layout_constraintBottom_toTopOf="@+id/btnSendNotification"
        app:layout_constraintEnd_toStartOf="@+id/btnProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPedometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:onClick="startStepsFragment"
        android:text="@string/pedometer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSendNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="openPetActivity"
        android:text="@string/sendnotification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPedometer"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="608dp"
        android:layout_marginEnd="24dp"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/nav_host_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>